--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/inline-edit/inline-edit.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/inline-edit/inline-edit.component.html
@@ -18,7 +18,11 @@
     </mat-form-field>
 
     <mat-form-field *ngIf="column === 'serial_no'">
-        <input type="text" placeholder="Enter a Serial No" matInput name="serial_no" [(ngModel)]="serial_no" />
+        <input type="text"
+        placeholder="Enter a Serial No"
+        matInput name="serial_no" 
+        [(ngModel)]="serial_no" 
+        oninput="this.value = this.value.toUpperCase()" />
     </mat-form-field>
 
     <mat-form-field *ngIf="column === 'warehouse'">
