fix: added submit column in csv dump

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -41,7 +41,7 @@
                 permissionState.warranty_claim.delete &&
                 warrantyClaimsDetails?.claim_status !== 'Cancelled'
               "
-              (click)="resetEntry()"
+              (click)="openConfirmDialog()"
               matTooltip="cancel"
               matTooltipPosition="above"
               matTooltipClass="tooltip"
@@ -50,8 +50,10 @@
               <ion-icon name="close-circle-outline"></ion-icon>
             </ion-fab-button>
             <ion-fab-button
-              *ngIf="permissionState.warranty_claim.read &&
-              warrantyClaimsDetails?.claim_status !== 'Cancelled'"
+              *ngIf="
+                permissionState.warranty_claim.read &&
+                warrantyClaimsDetails?.claim_status !== 'Cancelled'
+              "
               (click)="openDialog()"
               matTooltip="print"
               matTooltipPosition="above"
