fix(rma-warranty):Warranty Claim Validation fixes

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -114,15 +114,17 @@
                   formControlName="serial_no"
                   (change)="f.claim_type.disable()"
                   (keyup.enter)="serialChanged($event.target.value)"
+                  oninput="this.value = this.value.toUpperCase()"
                 />
                 <mat-error *ngIf="f.serial_no.hasError('required')">
                   Serial no is <strong>required</strong>
                 </mat-error>
                 <button
                   matSuffix
-                  mat-flat-button
-                  color="tertiary"
-                  (click)="serialChanged($event.target.value)"
+                  mat-raised-button
+                  color="light"
+                  fill="outline"
+                  (click)="serialChanged(f.serial_no.value)"
                 >
                   Search
                 </button>
@@ -266,6 +268,13 @@
               >
                 Add
               </ion-button>
+              <ion-button
+              color="tertiary"
+              *ngIf="warrantyObject?.set  === 'Bulk'"
+              (click)="clearProductDetails()"
+            >
+              Clear
+            </ion-button>
             </ion-col>
             <ion-col class="ion-text-left" *ngIf="route ==='add'">
               <ion-button
@@ -360,6 +369,7 @@
                   matInput
                   formControlName="customer_name"
                   [matAutocomplete]="auto"
+                  (focusout)="validateInput(f.customer_name, filteredCustomerList)"
                 />
                 <mat-autocomplete
                   autoActiveFirstOption
@@ -377,6 +387,11 @@
                 </mat-autocomplete>
                 <mat-error *ngIf="f.customer_name.hasError('required')">
                   Customer is <strong>required</strong>
+                </mat-error>
+                <mat-error *ngIf="f.customer_name.hasError('falseValse')">
+                  You should select a value from dropdown only.
+                  <strong>'{{f.customer_name.value}}'</strong> is not
+                  allowed.
                 </mat-error>
               </mat-form-field>
             </ion-col>
