--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
@@ -8,7 +8,7 @@
       </ion-col>
       <ion-col class="ion-text-right">
         <ion-button
-        *ngIf="permissionState.warranty_claim.update"
+        *ngIf="permissionState.warranty_claim.update && checkSubclaimStatus()"
           color="tertiary"
           [disabled]="!dataSource.length"
           fill="outline"
