fix(rma-warranty): fixed warranty filters

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -122,7 +122,7 @@
                 <button
                   matSuffix
                   mat-raised-button
-                  color="light"
+                  color="primary"
                   fill="outline"
                   (click)="serialChanged(f.serial_no.value)"
                 >
