feat(rma-warranty): added bulk claim parent button

--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
@@ -56,9 +56,10 @@
               >{{ row.claim_no || 'Draft' }}</a
             >
             <a
-              *ngIf="row.set === 'Single' || row.set === 'Part'"
-              [routerLink]="['/warranty/view-warranty-claims', row.uuid]"
-              >{{ row.claim_no || 'Draft' }}</a
+            *ngIf="row.set === 'Single' || row.set === 'Part'"
+            [routerLink]="['/warranty/view-warranty-claims', row.uuid]"
+            [queryParams]="{'claim_no': claim_no, 'parent_uuid': uuid}"
+            >{{ row.claim_no || 'Draft' }}</a
             >
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
