fix(rma-warranty): show bulk claim number

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/claim-details/claim-details.component.html
@@ -205,10 +205,10 @@
             color="primary"
             [routerLink]="[
               '/bulk-warranty-claim',
-              warrantyClaimsDetails?.claim_no,
+              bulkClaimNo,
               warrantyClaimsDetails?.parent
             ]"
-            >{{ warrantyClaimsDetails?.claim_no }}</ion-button
+            >{{ bulkClaimNo }}</ion-button
           >
         </ion-col>
       </ion-row>
