feat(rma-pos): items grid in sales invoice

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
@@ -44,3 +44,12 @@ mat-cell {
   display: flex;
   justify-content: center;
 }
+
+.grid-container {
+  max-height: 20em;
+  overflow-y: auto;
+}
+
+.grid-card {
+  height: 95%;
+}
